# influxdb3-napi

./: .gitattributes  Cargo.toml  README.md  browser.js  build.rs  index.d.ts  index.js  influxdb-client.wasi-browser.js  influxdb-client.wasi.cjs  influxdb3-napi.wasi-browser.js  influxdb3-napi.wasi.cjs  package.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: influx.proto  lib.rs
src/Point/: mod.rs  point_values.rs
src/client/: base.rs  channel.rs  http_client.rs  mod.rs  options.rs
src/client/browser/: client.rs  mod.rs
src/client/napi_rs/: client.rs  mod.rs
src/client/native/: client.rs  mod.rs
src/point/: escape.rs  mod.rs  point_values.rs
src/proto/: flight.proto
src/query/: by_batch.rs  by_row.rs  mod.rs  query_processor.rs
src/query/browser/: mod.rs  query_processor.rs
src/query/common/: mod.rs  query_processor.rs
src/serializer/: library_serializer.rs  mod.rs  not_safe.rs  raw_serializer.rs  unsafe_serializer.rs
src/serializer/browser/: mod.rs  unsafe_serializer.rs
src/serializer/common/: library_serializer.rs  mod.rs  raw_serializer.rs  unsafe_serializer.rs
src/tests/: lib_test.rs
src/write/: mod.rs  point.rs  point_values.rs
tests/: e2e_write.rs
