
[package]
authors = ["BadMachine <iskullbreakeri@gmail.com>"]
edition = "2021"
name = "influxdb3_napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "my-binary"
path = "src/bin/main.rs"

[dependencies]
serde_json = "1.0.141"
tokio = "1.47.0"

[dependencies.napi-derive]
version = "3.2"

[dependencies.napi]
git = "https://github.com/BadMachine/napi-rs"
branch = "fix/readable-stream-byte-mode-lock"
package = "napi"
features = ["full","experimental","tokio","web_stream","tokio-stream"]

[dependencies.reqwest]
version = "0.12"
features = ["json","__rustls"]

[dependencies.tonic]
version = "0.12.3"
features = ["gzip","tls-native-roots","tls-webpki-roots"]

[dependencies.arrow]
version = "55.2.0"
features = ["arrow-json"]

[dependencies.arrow-flight]
version = "55.2.0"
features = ["flight-sql"]

[dependencies.serde_arrow]
version = "0.13.4"
features = ["arrow-55"]

[build-dependencies]
napi-build = "2.2.3"

[build-dependencies.napi-derive]
version = "3.1.2"

[features]
default = []
native = []

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
debug = "none"
