[package]
authors = ["BadMachine <iskullbreakeri@gmail.com>"]
edition = "2021"
name = "influxdb3_napi"
version = "0.1.0"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

#[[bin]]
#name = "my-binary"
#path = "src/bin/main.rs"

[dependencies]
serde_json = "1.0.141"
tokio = { version = "1.47.0" }
futures-util = "0.3.31"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.napi-derive]
version = "3.2"

[dependencies.napi]
git = "https://github.com/BadMachine/napi-rs"
branch = "fix/readable-stream-byte-mode-lock"
package = "napi"
#features = ["full","experimental","tokio","web_stream","tokio-stream"]
features = ["experimental", "web_stream", "serde-json", "napi10", "async"]

#[dependencies.reqwest]
#version = "0.12.23"
#features = ["stream", "json", "rustls-tls-native-roots-no-provider", "gzip"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.13", features = ["gzip", "tls-native-roots", "tls-webpki-roots", "tls-ring"] }
arrow = { version = "56.0.0", features = ["arrow-json"] }
arrow-flight = { version = "56.0.0", features = ["flight-sql"] }
serde_arrow = { version = "0.13.5", features = ["arrow-56"] }
reqwest = { version = "0.12.23", features = ["stream", "json", "rustls-tls-native-roots-no-provider", "gzip"] }


[build-dependencies]
napi-build = "2.2.3"

[build-dependencies.napi-derive]
version = "3.1.2"

[target.x86_64-unknown-linux-gnu.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[target.aarch64-unknown-linux-gnu.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[target.aarch64-linux-android.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[target.armv7-linux-androideabi.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[target.aarch64-unknown-linux-musl.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[target.x86_64-unknown-linux-musl.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[target.armv7-unknown-linux-gnueabihf.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dev-dependencies]
dotenvy = "0.15"

[dev-dependencies.influxdb3_napi]
path = "."
features = ["native"]

[features]
default = []
native = []

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
debug = "none"
